spacing issue in tablet

--- a/src/components/WarehouseCard/WarehouseCard.scss
+++ b/src/components/WarehouseCard/WarehouseCard.scss
@@ -5,6 +5,7 @@
     border-top: 1px solid $secondary-cloud;
     padding-bottom: 1rem;
     padding-top: 1rem;
+    padding-right: 1rem;
     display: flex;
     flex-wrap: wrap;
 
